[package]
name = "k64"
version = "0.1.0"
authors = ["Stefan Hoelzl <stefan.hoelzl@posteo.de>", "Miguel Perez <miguelpg_95@hotmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for Kinetis K64 microcontrollers"
keywords = ["arm", "cortex-m", "kinetis", "svd2rust"]
license = "MIT"
repository = "https://github.com/stefanhoelzl/k64"

[dependencies]
cortex-m = "0.6.1"
bare-metal = "0.2.5"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.10"

[features]
rt = ["cortex-m-rt/device"]

