[package]
name = "Flash_LED_LPTMR"
version = "0.1.0"
authors = ["Miguel Pérez García <miguelpg_95@hotmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"

[dependencies.k64]
version = "0.1.0"
features = ["rt"]

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"