[package]
name = "flash_led_ptmr"
version = "0.1.0"
authors = ["Miguel Pérez García <miguelpg_95@hotmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[dependencies.cortex-m-rt]
version = "0.6.10"
features = ["device"]

[dependencies.k64]
version = "0.1.0"
features = ["rt"]
path = "../.."

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"
